[package]
name = "demo-hack-impl"
version = "0.0.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Demo of proc-macro-hack"
repository = "https://github.com/dtolnay/proc-macro-hack"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = { version = "0.4", path = ".." }

# XXX shouldn't be necessary in user crate
# XXX "nightly" feature is just for testing that the spans work
proc-macro2 = { version = "0.3.1", features = ["nightly"] }
